School detail page step-1 done

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         <header>
           <div class="logo">
             <h1> ASMITA </h1>
+
           </div>
         </header>
         <div class="content-wrap">
+          <div class="padding heading">
+            <h2>School Particulars</h2>
+          </div>
           <div class="field padding">
             <label for="">U-Dise Code <span class="star">*</span></label>
             <div class="multidise tiny-input">
@@ -60,14 +64,14 @@
             <div class="row">
               <div class="start">
                 <span>20</span>
-                <input type="number" class="form-control">
-                <input type="number" class="form-control">
+                <input type="number" class="form-control" maxlength="1">
+                <input type="number" class="form-control" maxlength="1">
                 <span class="dashed">-</span>
               </div>
               <div class="end">
                 <span>20</span>
-                <input type="number" class="form-control">
-                <input type="number" class="form-control">
+                <input type="number" class="form-control" maxlength="1">
+                <input type="number" class="form-control" maxlength="1">
               </div>
             </div>
           </div>
@@ -359,6 +363,9 @@
       <script src="js/plugins.js"></script>
       <script src="js/vendor/jquery.easy-autocomplete.js"></script>
     <script src="js/main.js"></script>
+    <input type="hidden" id="MicrosoftILITWebEmbedInfo" attachMode="optout" value="">
+<script type="text/javascript" src="https://dl.bhashaindia.com/IIW/IIW_SDK/IIW_Hindi.js" defer="defer"></script>
+
     
   </body>
 </html>
