--- a/schooldetails-1.html
+++ b/schooldetails-1.html
@@ -105,43 +105,29 @@
             </div>
           </div>
 
-          <div class="field">
-            <div class="padding">
-              <label for="">Year of recognition of school <span class="star">*</span></label>  
+          <div class="field padding">
+            <label for="">Year of recognition of school <span class="star">*</span></label>
+            <div class="col-4">
+              <input type="text" class="form-control">
             </div>
-            <div class="row">
-              <div class="col-4">
-                <label for=""  class="small-text">Elementary</label>
-                <input type="text" class="form-control">
-              </div>
-              <div class="col-4">
-                <label for="" class="small-text">Secondary</label>
-                <input type="text" class="form-control">
-              </div>
-              <div class="col-4">
-                <label for="" class="small-text">Higher Secondary</label>
-                <input type="text" class="form-control">
-              </div>
+            <div class="col-4">
+              <input type="text" class="form-control">
+            </div>
+            <div class="col-4">
+              <input type="text" class="form-control">
             </div>
           </div>
 
-          <div class="field">
-            <div class="padding">
-              <label for="">Year of upgrade<span class="star">*</span></label>  
+          <div class="field padding">
+            <label for="">Year of upgrade <span class="star">*</span></label>
+            <div class="col-4">
+              <input type="text" class="form-control">
             </div>
-            <div class="row">
-              <div class="col-4">
-                <label for="" class="small-text">Primary to upper primary</label>
-                <input type="text" class="form-control">
-              </div>
-              <div class="col-4">
-                <label for="" class="small-text">upper primary to secondary</label>
-                <input type="text" class="form-control">
-              </div>
-              <div class="col-4">
-                <label for="" class="small-text">Secondary to higher secondary</label>
-                <input type="text" class="form-control">
-              </div>
+            <div class="col-4">
+              <input type="text" class="form-control">
+            </div>
+            <div class="col-4">
+              <input type="text" class="form-control">
             </div>
           </div>
         
