School Details page markup done

--- a/schooldetails.html
+++ b/schooldetails.html
@@ -135,7 +135,7 @@
                 <input type="text" class="form-control">
               </div>
               <div class="col-4">
-                <label for="" class="small-text">upper primary to secondary</label>
+                <label for="" class="small-text">Upper primary to secondary</label>
                 <input type="text" class="form-control">
               </div>
               <div class="col-4">
